// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`edits an existing file correctly 1`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
          style="margin: -0.5em 0px; width: 2.0em;"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
    </div>
  </div>
  <section
    id="study"
  >
    <div
      class="ui basic secondary segment"
    >
      <div
        class="ui container"
      >
        <h1
          class="ui header"
        >
          <div
            class="content"
          >
            benchmark extensible e-business
            <div
              class="sub header"
            >
              SD_8WX8QQ06
              <span
                class=""
              >
                <button>
                  <svg
                    height="10"
                    id="mock-icon"
                    kind="copy"
                    width="10"
                  >
                    <title>
                      icon-
                      copy
                    </title>
                  </svg>
                </button>
              </span>
            </div>
          </div>
        </h1>
      </div>
    </div>
    <div
      class="ui container"
    >
      <div
        class="ui pink pointing secondary menu"
      >
        <a
          class="item"
          href="/study/SD_8WX8QQ06/basicInfo"
        >
          Basic Info
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/dashboard"
        >
          Dashboard
        </a>
        <a
          aria-current="page"
          class="item active"
          href="/study/SD_8WX8QQ06/documents"
        >
          Documents
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/collaborators"
        >
          Collaborators
        </a>
      </div>
    </div>
  </section>
  <section
    class="grid-container mx-auto grid-container--collapsed-cells my-20 px-12"
  >
    <section
      class="study-file-detail cell-12"
    >
      <div
        class="ui grid"
      >
        <div
          class="row"
        >
          <div
            class="column"
          >
            <a
              data-testid="back-to-filelist"
              href="/study/SD_8WX8QQ06/documents"
            >
              <button
                class="ui mini basic icon left floated left labeled button"
              >
                <i
                  aria-hidden="true"
                  class="arrow left icon"
                />
                Back to All Documents
              </button>
            </a>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="column"
          >
            <div
              class="ui header"
            >
              organization.jpeg
              <div
                class="ui mini icon labeled right floated buttons"
              >
                <button
                  class="ui button"
                  data-testid="edit-button"
                >
                  <i
                    aria-hidden="true"
                    class="pencil icon"
                  />
                  EDIT
                </button>
                <button
                  class="ui button"
                >
                  <i
                    aria-hidden="true"
                    class="download icon"
                  />
                  DOWNLOAD
                </button>
                <button
                  class="ui negative button"
                >
                  <i
                    aria-hidden="true"
                    class="trash alternate icon"
                  />
                  DELETE
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="stretched row"
        >
          <div
            class="four wide computer eight wide mobile four wide tablet column"
          >
            <div
              class="ui mini statistic"
            >
              <div
                class="label"
              >
                Status
              </div>
              <div
                class="value"
              >
                <div
                  class="ui orange tiny basic label"
                >
                  Pending Review
                </div>
              </div>
            </div>
          </div>
          <div
            class="four wide computer eight wide mobile four wide tablet column"
          >
            <div
              class="ui mini statistic"
            >
              <div
                class="label"
              >
                Document Type
              </div>
              <div
                class="value"
              >
                <div
                  class="ui tiny basic label"
                >
                  <div
                    class="detail"
                  >
                    Clinical/Phenotype Data
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="four wide computer eight wide mobile four wide tablet column"
          >
            <div
              class="ui mini statistic"
            >
              <div
                class="label"
              >
                Last Updated
              </div>
              <div
                class="value"
              >
                <div
                  class="ui tiny image label"
                >
                  <img
                    alt="xuzhu"
                    src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                  />
                  xuzhu
                  <div
                    class="detail"
                  >
                    <time
                      datetime="2018-09-27T05:32:26.000Z"
                      title="2018-09-27T05:32:26+00:00"
                    >
                      7 months ago
                    </time>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="four wide computer eight wide mobile four wide tablet column"
          >
            <div
              class="ui mini statistic"
            >
              <div
                class="label"
              >
                Size
              </div>
              <div
                class="value"
              >
                <div
                  class="ui tiny basic label"
                >
                  5.5 kB
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="column"
          >
            <div
              class="ui small header"
            >
              Description
            </div>
            Month necessary animal end standard case. View system operation message decade. Actually sing because deal everything woman subject.
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="column"
          >
            <div
              class="ui divided selection relaxed list"
              role="list"
            >
              <div
                class="item"
                role="listitem"
              >
                <h4
                  class="header"
                >
                  Document Versions (
                  3
                  )
                  <button
                    class="ui mini icon primary right floated left labeled button"
                  >
                    <i
                      aria-hidden="true"
                      class="cloud upload icon"
                    />
                    UPLOAD VERSION
                  </button>
                </h4>
              </div>
              <div
                class="item"
                role="listitem"
              >
                <div
                  class="content"
                >
                  <div
                    class="ui mini labels"
                  >
                    <button
                      class="ui orange ribbon label"
                    >
                      VersionFileName.js
                    </button>
                    <div
                      class="ui basic image label"
                    >
                      <img
                        alt="xuzhu"
                        src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                      />
                      <time
                        datetime="2018-09-27T05:32:26.000Z"
                        title="2018-09-27T05:32:26+00:00"
                      >
                        7 months ago
                      </time>
                    </div>
                    <button
                      class="ui basic label"
                    >
                      <i
                        aria-hidden="true"
                        class="download icon"
                      />
                      5.5 kB
                    </button>
                    <button
                      class="ui basic label"
                    >
                      <i
                        aria-hidden="true"
                        class="copy icon"
                      />
                      FV_DMTKEFQW
                    </button>
                    <div
                      class="ui purple tag label"
                    >
                      LATEST
                    </div>
                  </div>
                  <div
                    class="description"
                  >
                    version description
                  </div>
                </div>
              </div>
              <div
                class="item"
                role="listitem"
              >
                <div
                  class="content"
                >
                  <div
                    class="ui mini labels"
                  >
                    <button
                      class="ui orange ribbon label"
                    >
                      VersionFileName.js
                    </button>
                    <div
                      class="ui basic image label"
                    >
                      <img
                        alt="xuzhu"
                        src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                      />
                      <time
                        datetime="2018-08-21T03:16:11.000Z"
                        title="2018-08-21T03:16:11+00:00"
                      >
                        8 months ago
                      </time>
                    </div>
                    <button
                      class="ui basic label"
                    >
                      <i
                        aria-hidden="true"
                        class="download icon"
                      />
                      9.9 kB
                    </button>
                    <button
                      class="ui basic label"
                    >
                      <i
                        aria-hidden="true"
                        class="copy icon"
                      />
                      FV_TT8NF09R
                    </button>
                  </div>
                  <div
                    class="description"
                  >
                    version description
                  </div>
                </div>
              </div>
              <div
                class="item"
                role="listitem"
              >
                <div
                  class="content"
                >
                  <div
                    class="ui mini labels"
                  >
                    <button
                      class="ui orange ribbon label"
                    >
                      VersionFileName.js
                    </button>
                    <div
                      class="ui basic image label"
                    >
                      <img
                        alt="xuzhu"
                        src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                      />
                      <time
                        datetime="2017-08-25T00:05:30.000Z"
                        title="2017-08-25T00:05:30+00:00"
                      >
                        2 years ago
                      </time>
                    </div>
                    <button
                      class="ui basic label"
                    >
                      <i
                        aria-hidden="true"
                        class="download icon"
                      />
                      5.4 kB
                    </button>
                    <button
                      class="ui basic label"
                    >
                      <i
                        aria-hidden="true"
                        class="copy icon"
                      />
                      FV_2WV3VNJN
                    </button>
                  </div>
                  <div
                    class="description"
                  >
                    version description
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </section>
</div>
`;

exports[`edits an existing file correctly 2`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
          style="margin: -0.5em 0px; width: 2.0em;"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
    </div>
  </div>
  <section
    id="study"
  >
    <div
      class="ui basic secondary segment"
    >
      <div
        class="ui container"
      >
        <h1
          class="ui header"
        >
          <div
            class="content"
          >
            benchmark extensible e-business
            <div
              class="sub header"
            >
              SD_8WX8QQ06
              <span
                class=""
              >
                <button>
                  <svg
                    height="10"
                    id="mock-icon"
                    kind="copy"
                    width="10"
                  >
                    <title>
                      icon-
                      copy
                    </title>
                  </svg>
                </button>
              </span>
            </div>
          </div>
        </h1>
      </div>
    </div>
    <div
      class="ui container"
    >
      <div
        class="ui pink pointing secondary menu"
      >
        <a
          class="item"
          href="/study/SD_8WX8QQ06/basicInfo"
        >
          Basic Info
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/dashboard"
        >
          Dashboard
        </a>
        <a
          aria-current="page"
          class="item active"
          href="/study/SD_8WX8QQ06/documents"
        >
          Documents
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/collaborators"
        >
          Collaborators
        </a>
      </div>
    </div>
  </section>
  <section
    class="grid-container mx-auto grid-container--collapsed-cells my-20 px-12"
  >
    <section
      class="study-file-detail cell-12"
    >
      <div
        class="ui grid"
      >
        <div
          class="row"
        >
          <div
            class="column"
          >
            <a
              data-testid="back-to-filelist"
              href="/study/SD_8WX8QQ06/documents"
            >
              <button
                class="ui mini basic icon left floated left labeled button"
              >
                <i
                  aria-hidden="true"
                  class="arrow left icon"
                />
                Back to All Documents
              </button>
            </a>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="column"
          >
            <div
              class="ui header"
            >
              mynewfile.txt
              <div
                class="ui mini icon labeled right floated buttons"
              >
                <button
                  class="ui button"
                  data-testid="edit-button"
                >
                  <i
                    aria-hidden="true"
                    class="pencil icon"
                  />
                  EDIT
                </button>
                <button
                  class="ui button"
                >
                  <i
                    aria-hidden="true"
                    class="download icon"
                  />
                  DOWNLOAD
                </button>
                <button
                  class="ui negative button"
                >
                  <i
                    aria-hidden="true"
                    class="trash alternate icon"
                  />
                  DELETE
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="stretched row"
        >
          <div
            class="four wide computer eight wide mobile four wide tablet column"
          >
            <div
              class="ui mini statistic"
            >
              <div
                class="label"
              >
                Status
              </div>
              <div
                class="value"
              >
                <div
                  class="ui teal tiny basic label"
                >
                  Approved
                </div>
              </div>
            </div>
          </div>
          <div
            class="four wide computer eight wide mobile four wide tablet column"
          >
            <div
              class="ui mini statistic"
            >
              <div
                class="label"
              >
                Document Type
              </div>
              <div
                class="value"
              >
                <div
                  class="ui tiny basic label"
                >
                  <div
                    class="detail"
                  >
                    Clinical/Phenotype Data
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="four wide computer eight wide mobile four wide tablet column"
          >
            <div
              class="ui mini statistic"
            >
              <div
                class="label"
              >
                Last Updated
              </div>
              <div
                class="value"
              >
                <div
                  class="ui tiny image label"
                >
                  <img
                    alt="xuzhu"
                    src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                  />
                  xuzhu
                  <div
                    class="detail"
                  >
                    <time
                      datetime="2018-09-27T05:32:26.000Z"
                      title="2018-09-27T05:32:26+00:00"
                    >
                      7 months ago
                    </time>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="four wide computer eight wide mobile four wide tablet column"
          >
            <div
              class="ui mini statistic"
            >
              <div
                class="label"
              >
                Size
              </div>
              <div
                class="value"
              >
                <div
                  class="ui tiny basic label"
                >
                  5.5 kB
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="column"
          >
            <div
              class="ui small header"
            >
              Description
            </div>
            Some description here
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="column"
          >
            <div
              class="ui divided selection relaxed list"
              role="list"
            >
              <div
                class="item"
                role="listitem"
              >
                <h4
                  class="header"
                >
                  Document Versions (
                  3
                  )
                  <button
                    class="ui mini icon primary right floated left labeled button"
                  >
                    <i
                      aria-hidden="true"
                      class="cloud upload icon"
                    />
                    UPLOAD VERSION
                  </button>
                </h4>
              </div>
              <div
                class="item"
                role="listitem"
              >
                <div
                  class="content"
                >
                  <div
                    class="ui mini labels"
                  >
                    <button
                      class="ui teal ribbon label"
                    >
                      VersionFileName.js
                    </button>
                    <div
                      class="ui basic image label"
                    >
                      <img
                        alt="xuzhu"
                        src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                      />
                      <time
                        datetime="2018-09-27T05:32:26.000Z"
                        title="2018-09-27T05:32:26+00:00"
                      >
                        7 months ago
                      </time>
                    </div>
                    <button
                      class="ui basic label"
                    >
                      <i
                        aria-hidden="true"
                        class="download icon"
                      />
                      5.5 kB
                    </button>
                    <button
                      class="ui basic label"
                    >
                      <i
                        aria-hidden="true"
                        class="copy icon"
                      />
                      FV_DMTKEFQW
                    </button>
                    <div
                      class="ui purple tag label"
                    >
                      LATEST
                    </div>
                  </div>
                  <div
                    class="description"
                  >
                    version description
                  </div>
                </div>
              </div>
              <div
                class="item"
                role="listitem"
              >
                <div
                  class="content"
                >
                  <div
                    class="ui mini labels"
                  >
                    <button
                      class="ui orange ribbon label"
                    >
                      VersionFileName.js
                    </button>
                    <div
                      class="ui basic image label"
                    >
                      <img
                        alt="xuzhu"
                        src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                      />
                      <time
                        datetime="2018-08-21T03:16:11.000Z"
                        title="2018-08-21T03:16:11+00:00"
                      >
                        8 months ago
                      </time>
                    </div>
                    <button
                      class="ui basic label"
                    >
                      <i
                        aria-hidden="true"
                        class="download icon"
                      />
                      9.9 kB
                    </button>
                    <button
                      class="ui basic label"
                    >
                      <i
                        aria-hidden="true"
                        class="copy icon"
                      />
                      FV_TT8NF09R
                    </button>
                  </div>
                  <div
                    class="description"
                  >
                    version description
                  </div>
                </div>
              </div>
              <div
                class="item"
                role="listitem"
              >
                <div
                  class="content"
                >
                  <div
                    class="ui mini labels"
                  >
                    <button
                      class="ui orange ribbon label"
                    >
                      VersionFileName.js
                    </button>
                    <div
                      class="ui basic image label"
                    >
                      <img
                        alt="xuzhu"
                        src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                      />
                      <time
                        datetime="2017-08-25T00:05:30.000Z"
                        title="2017-08-25T00:05:30+00:00"
                      >
                        2 years ago
                      </time>
                    </div>
                    <button
                      class="ui basic label"
                    >
                      <i
                        aria-hidden="true"
                        class="download icon"
                      />
                      5.4 kB
                    </button>
                    <button
                      class="ui basic label"
                    >
                      <i
                        aria-hidden="true"
                        class="copy icon"
                      />
                      FV_2WV3VNJN
                    </button>
                  </div>
                  <div
                    class="description"
                  >
                    version description
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </section>
</div>
`;
